Resizing cab mileage field on trip form

--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -191,7 +191,7 @@
 
       <li class="selfclear">
         <%= f.label :mileage, "Cab Mileage:" %>
-        <%= f.text_field :mileage %>
+        <%= f.text_field :mileage, :size => 3 %>
       </li>
 
       <li class="selfclear">
