--- a/app/views/reports/customer_receiving_trips_in_range.html.erb
+++ b/app/views/reports/customer_receiving_trips_in_range.html.erb
@@ -31,7 +31,7 @@
         <%= link_to customer.name, customer %>
       </td>
       <td>
-        <%= customer.birth_date.strftime('%m-%d-%Y') %>
+        <%= customer.birth_date.try(:strftime, '%m-%d-%Y') %>
       </td>
       <td>
         <%= customer.trips.count %>
