Renaming CabRuns to CabTrips, and adding #edit_multiple action

--- a/app/views/cab_trips/_cab_trips.html.erb
+++ b/app/views/cab_trips/_cab_trips.html.erb
@@ -1,5 +1,5 @@
-<% @cab_runs.each do |trip| %>
-  <%= fields_for 'cab_runs[]', trip do |trip_fields| %>
+<% @cab_trips.each do |trip| %>
+  <%= fields_for 'cab_trips[]', trip do |trip_fields| %>
     <%= render :partial => 'trips/trip_form', :locals => {:trip_fields => trip_fields, :trip => trip, :show_edit_run_link => false} %>
   <% end %>
 <% end %>
