--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
       <ul id="primary-nav" class="selfclear">
         <% if show_scheduling? %><li class="trips"><%= link_to "Trips", trips_path %></li><% end %>
         <% if show_scheduling? %><li class="runs"><%= link_to "Runs", runs_path %></li><% end %>
-        <% if show_scheduling? %><li class="cab_trips"><%= link_to "Cab runs", cab_trips_path %></li><% end %>
+        <% if show_scheduling? %><li class="cab_trips"><%= link_to "Cab trips", cab_trips_path %></li><% end %>
         <% if show_scheduling? %><li class="customers"><%= link_to "Customers", customers_path %></li><% end %>
         <% if show_scheduling? %><li class="reports"><%= link_to "Reports", reports_path %></li><% end %>
         <% if show_dispatch?   %><li class="dispatch"><%= link_to "Dispatch", dispatch_path %></li><% end %>
