--- a/app/views/cab_trips/edit_multiple.html.erb
+++ b/app/views/cab_trips/edit_multiple.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header">
-  <h1>Editing cab trips for <%= @for_date.strftime "%m-%d-%Y" %></h1>
+  <h1>Editing cab trips for <%= @week_start.strftime "%m-%d-%Y" %></h1>
 </div>
 
 <%= form_tag update_multiple_cab_trips_path, :method => :put do %>
