Adding monthly data to CCTC report

--- a/app/views/reports/cctc_summary_report.html.erb
+++ b/app/views/reports/cctc_summary_report.html.erb
@@ -413,10 +413,10 @@
       <td class="a_l">Escort Hours</td>
       <td class="b_full s_50">&nbsp;</td>
       <td class="b_full s_50">&nbsp;</td>
-      <td class="b_full">###</td>
-      <td class="b_full">###</td>
-      <td class="b_full">###</td>
-      <td class="b_full">###</td>
+      <td class="b_full"><%= @report[:driver_information][:escort_hours][:rc] %></td>
+      <td class="b_full"><%= @report[:driver_information][:escort_hours][:stf] %></td>
+      <td class="b_full"><%= @report[:driver_information][:escort_hours][:rc] %></td>
+      <td class="b_full"><%= @report[:driver_information][:escort_hours][:stf] %></td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
     </tr>
@@ -425,10 +425,10 @@
       <td class="a_l">Administrative Hours</td>
       <td class="b_full s_50">&nbsp;</td>
       <td class="b_full s_50">&nbsp;</td>
-      <td class="b_full">###</td>
-      <td class="b_full">###</td>
-      <td class="b_full">###</td>
-      <td class="b_full">###</td>
+      <td class="b_full"><%= @report[:driver_information][:administrative_hours][:rc] %></td>
+      <td class="b_full"><%= @report[:driver_information][:administrative_hours][:stf] %></td>
+      <td class="b_full"><%= @report[:driver_information][:administrative_hours][:rc] %></td>
+      <td class="b_full"><%= @report[:driver_information][:administrative_hours][:stf] %></td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
     </tr>
