Upgrading to Rails 3.2 and Devise 3.4

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <%= javascript_include_tag "jquery.colorPicker.js" %>
   <%= javascript_include_tag "idletimeout.js" %>
   <%= javascript_tag do %>
-    <%= render :partial => "layouts/constants.js" %>
+    <%= render :partial => "layouts/constants", formats: :js %>
   <% end %>
   <%= csrf_meta_tag %>
   <%= yield :head %>
