Setting up Asset Pipeline (NOTE: mass-assignment protection is delberately disable in this commit since we are moving straignt to Rails 4 where strong parameters replaces attr_accessible)

--- a/app/assets/javascripts/constants.js.erb
+++ b/app/assets/javascripts/constants.js.erb
@@ -1,4 +1,5 @@
-<%# Global app object: Expose any values to JavaScript through this object. %>
+<% # Global app object: Expose any values to JavaScript through this object %>
+<% environment.context_class.instance_eval { include Rails.application.routes.url_helpers } %>
 var RidePilot = {
   business_hours: {
     start: <%= BUSINESS_HOURS[:start] %>,
