--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,21 +4,8 @@
   <title>
     <%= content_for?(:title) ? yield(:title) : "RidePilot" %>
   </title>
-  <%= stylesheet_link_tag "style.css" %>
-  <%= stylesheet_link_tag "print.css", :media=>'print' %>
-  <%= stylesheet_link_tag "jquery-ui-1.8.9.custom.css" %>
-  <%= stylesheet_link_tag "jquery.weekcalendar.css" %>
-  <%= stylesheet_link_tag "jquery-ui-timepicker-addon.css" %>
-  <%= javascript_include_tag :defaults %>
-  <%= javascript_include_tag "autocomplete-rails.js" %>
-  <%= javascript_include_tag "jquery.weekcalendar.js" %>
-  <%= javascript_include_tag "jquery-ui-timepicker-addon.js" %>
-  <%= javascript_include_tag "dateFormat.js" %>
-  <%= javascript_include_tag "jquery.colorPicker.js" %>
-  <%= javascript_include_tag "idletimeout.js" %>
-  <%= javascript_tag do %>
-    <%= render :partial => "layouts/constants", formats: :js %>
-  <% end %>
+  <%= stylesheet_link_tag "application" %>
+  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tag %>
   <%= yield :head %>
 </head>
