--- a/app/views/cab_trips/_grouped_cab_trips.html.erb
+++ b/app/views/cab_trips/_grouped_cab_trips.html.erb
@@ -5,7 +5,7 @@
     </td>
     <td>
       <% if @grouped_cab_trips.has_key?(day.to_s) && @grouped_cab_trips[day.to_s].size %>
-        <%= link_to "Edit #{pluralize(@grouped_cab_trips[day.to_s].size, "cab trip")}", edit_multiple_cab_trips_path(start: day.to_time_in_current_zone.to_i) %>
+        <%= link_to "Edit #{pluralize(@grouped_cab_trips[day.to_s].size, "cab trip")}", edit_multiple_cab_trips_path(start: day.in_time_zone.to_i) %>
       <% else %>
         No trips
       <% end %>
