Updating some outdated jQuery libraries

--- a/app/views/dispatch/index.html.erb
+++ b/app/views/dispatch/index.html.erb
@@ -37,7 +37,7 @@
 
 <%= javascript_include_tag "styledmarker.js" %>
 <%= javascript_include_tag "jquery.jstree.js" %>
-<%= javascript_include_tag "jquery.layout.min-1.2.0.js" %>
+<%= javascript_include_tag "jquery.layout.js" %>
 <%= javascript_include_tag "dispatcher.js" %>
 <%= stylesheet_link_tag "jstree-apple/style.css" %>
 <%= stylesheet_link_tag "jquery-layout-default.css" %>
