--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -8,7 +8,7 @@
   </div>
 </div>
 
-<% form_for @address do |form| %>
+<%= form_for @address do |form| %>
   <% if @address.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@address.errors.count, "error") %> prohibited this address from being saved:</h2>
@@ -22,7 +22,7 @@
   
   <fieldset>
     <ol class="section first">
-    <%= render 'form', :form => form, :editing_address => true %>
+      <%= render 'form', :form => form, :editing_address => true %>
     </ol>
   </fieldset>
   
